# starlette-werkzeug-debugger

./: .gitignore  CHANGELOG.md  LICENSE  README.rst  pyproject.toml  starlette_werkzeug_debugger.py  tox.ini
.github/workflows/: python-package.yml
sample_usage/: fastapi_example.py  fastapi_swagger_integraation.py  starlette_example.py
sample_usage/static/: swagger_extra.css  swagger_extra.js
starlette_werkzeug_debugger/: __init__.py
tests/: test_debugger.py
